--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,23 +1,56 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  components:
+    navbar:
+      title: Jargon
+      menu: Menu
+      edit_account: Edit Account
+      log_out: Log Out
+      sign_in: Sign In
+      register: Register
+      localizations: Localizations
+      applications: Applications
+  localizations:
+    index:
+      localizations: Localizations
+      id: ID
+      name: Name
+      locales: Locales
+      created: Created
+      updated: Updated
+      actions: Actions
+      by: by
+      edit: Edit
+      new_localization: New Localization
+    show:
+      localization: Localization
+      name: "Name:"
+      uuid: "UUID:"
+      owner: "Owner:"
+      created: "Created:"
+      updated: "Updated:"
+      locales: "Locales:"
+      new_locale: New Locale
+      edit: Edit
+    delete_form:
+      destroy: Destroy
+      confirm: "Are you sure?"
+    edit:
+      editing: Editing
+      name: Name
+      submit: Submit
+    new:
+      new_localization: New Localization
+      name: Name
+      submit: Submit
+  locales:
+    delete_form:
+      destroy: Destroy
+      confirm: "Are you sure?"
+    locale_form:
+      name: Name
+      yaml: YAML
+      submit: Submit
+    new:
+      locale_for: locale for
+    show:
+      locale_for: locale for
